# Ai-Project

./: .gitignore  README.md  UserInput.html  camera.html  capture.html  index.html  model_loader.py  pyproject.toml  webserver.py
json/: user_data.json
model/: blazepose.py  measurement_attention_mlp.py  model.py
static/: User_input.js  camera.css  input.css  style.css
