[tool.poetry]
name = "test-fastapi"
version = "0.1.0"
description = "FastAPI Test"
authors = ["sayyes304 <yhs7409@naver.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.6.2,<3.10"
fastapi = "^0.70.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
